# morphl

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  README.md  SPEC.md  design.txt  out.mbc
core/: core.mpg
designs/: design.txt  subtyping.txt
docs/backend/: vm_bytecode.md
docs/mechanics/: storage.md
docs/semantics/: storage.md
docs/typing/: typing.md
examples/: block_test.mpl  builtin_test.src  else.mpl  factorial.mpl  grammar.txt  grammar_overload.txt  grammar_sample.txt  import.mpl  invalid_type.mpl  minimal.mpl  module.mpl  mustfail.mpl  mut_sample.mpl  operator_test.src  program.src  property.mpl  ret_example.mpl  scoped_syntax_test.src  simple_builtin.src  simple_while.mpl  syntax.txt  syntax_test.src  test_critical_ops.mpl  test_mut.mpl  test_recursion.mpl  test_return.mpl
include/ast/: ast.h
include/backend/: backend.h  vm.h
include/data/: stream.h
include/interface/: abi.h
include/lexer/: lexer.h
include/parser/: builtin_parser.h  operators.h  parser.h  scoped_parser.h
include/runtime/: runtime.h
include/tokens/: tokens.h
include/typing/: inference.h  type_context.h  typing.h
include/util/: error.h  file.h  fs.h  util.h
src/: CMakeLists.txt  main.c  main.cpp
src/ast/: CMakeLists.txt  ast.c  ast.cpp  ast.h
src/backend/: CMakeLists.txt  backend.c  c.c  vm.c
src/config/: CMakeLists.txt  config.cpp  config.h
src/error/: CMakeLists.txt  error.cpp  error.h
src/interpreter/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.cpp  lexer.h
src/parser/: CMakeLists.txt  builtin_parser.c  error.h  importManager.cpp  importManager.h  macro.cpp  macro.h  macroManager.cpp  macroManager.h  operators.c  parser.c  parser.cpp  parser.h  scope.cpp  scope.h  scoped_parser.c  syntax.cpp  syntax.h  type.cpp  type.h
src/runtime/: CMakeLists.txt  vm_runtime.c
src/type/: CMakeLists.txt  operatorType.cpp  operatorType.h  type.cpp  type.h
src/typing/: CMakeLists.txt  inference.c  type_context.c  typing.c
src/util/: CMakeLists.txt  error.c  file.c  fs.c  util.c
src/vm/: CMakeLists.txt  instruction.h  serializer.cpp  serializer.h  vm.cpp  vm.h
test/: CMakeLists.txt  error_tests.cpp  parser_tests.cpp  token_dump.c  typing_tests.cpp
test/ast_test/: CMakeLists.txt  ast_test.cpp
test/lexer_test/: CMakeLists.txt  lexer_test.cpp
test/parser_test/: CMakeLists.txt  parser_test.cpp
